--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>My Portfolio Website</title>
+    <title>My First Portfolio Website</title>
     <link rel="shortcut icon" href="https://vignette.wikia.nocookie.net/donthugmeimscared/images/6/64/Favicon.ico/revision/latest?cb=20190206212533">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bangers&display=swap">
