Updated the title of the About page

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>First HTML Web Page</title>
+    <title>About Thomas Frazer page</title>
     <link rel="shortcut icon" href="https://vignette.wikia.nocookie.net/donthugmeimscared/images/6/64/Favicon.ico/revision/latest?cb=20190206212533">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bangers&display=swap">
