--- a/work.html
+++ b/work.html
@@ -13,7 +13,7 @@
     <!-- Header including the logo and the main navigation -->
     <header class="page-header">
         <!-- Add your logo here -->
-        <img src="img/logo.jpg" alt="Placeholer image for my logo" class="page-header__item profile_logo">
+        <img src="img/logo.svg" alt="Logo Image" class="page-header__item profile_logo">
         <nav class="main-navigation page-header__item">
             <ul role="menubar" class="navigation-list">
                 <!--Navigation links -->
