Made link and form in contact page W3C compliant

--- a/contact.html
+++ b/contact.html
@@ -54,16 +54,14 @@
                     <a role="menuitem" href="mailto:thomasmichaelfrazer@gmail.com"> thomasmichaelfrazer@gmail.com</a>
                 </li>
             </ul>
-            <a role="menuitem" aria-label="A clickable button to make a Skype call href="skype:live:thomasmichaelfrazer">
-            <button type="button">Let's connect</button>
-            </a>
+            <a class="button" aria-label="A clickable button to make a Skype call" href="skype:live:thomasmichaelfrazer">Let's connect</a>
         </div>
     </div>
     <div id="contact-form-container">
         <p>
             You can also send through your contact details and leave a message with your project idea if that's your style: <br>
         </p>
-        <form action="" method="post" id="contact-form">
+        <form method="post" id="contact-form">
             <label class="standard-label" for="contact-email">E-mail*: </label>
             <input type="email" id="contact-email" required>
             <br>
