Added link path to Work page from Home page

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <p>
             My name is Thomas Frazer. I am a <span>web developer</span> from Australia
         </p>
-        <a href="X">Check out some of my projects</a>
+        <a href="work.html">Check out some of my projects</a>
     </div>
     <!-- Footer with links to social media profiles -->
     <footer class="page-footer">
