Added placeholder text to Work page

--- a/work.html
+++ b/work.html
@@ -44,7 +44,7 @@
                     Mobile web app
                 </h2>
                 <p>
-                    Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
+                    Macaroon cupcake marzipan gummi bears jelly cupcake jelly-o gingerbread. Cupcake biscuit chocolate cake donut chocolate cake croissant oat cake oat cake.
                 </p>
                 <a href="#">See project in Github</a>
             </div>
@@ -53,7 +53,7 @@
                     Mobile web app
                 </h2>
                 <p>
-                    Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
+                    Macaroon cupcake marzipan gummi bears jelly cupcake jelly-o gingerbread. Cupcake biscuit chocolate cake donut chocolate cake croissant oat cake oat cake.
                 </p>
                 <a href="#">See project in Github</a>
             </div>
@@ -62,7 +62,7 @@
                     Mobile web app
                 </h2>
                 <p>
-                    Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
+                    Macaroon cupcake marzipan gummi bears jelly cupcake jelly-o gingerbread. Cupcake biscuit chocolate cake donut chocolate cake croissant oat cake oat cake.
                 </p>
                 <a href="#">See project in Github</a>
             </div>
@@ -71,7 +71,7 @@
                     Mobile web app
                 </h2>
                 <p>
-                    Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
+                    Macaroon cupcake marzipan gummi bears jelly cupcake jelly-o gingerbread. Cupcake biscuit chocolate cake donut chocolate cake croissant oat cake oat cake.
                 </p>
                 <a href="#">See project in Github</a>
             </div>
@@ -80,7 +80,7 @@
                     Mobile web app
                 </h2>
                 <p>
-                    Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
+                    Macaroon cupcake marzipan gummi bears jelly cupcake jelly-o gingerbread. Cupcake biscuit chocolate cake donut chocolate cake croissant oat cake oat cake.
                 </p>
                 <a href="#">See project in Github</a>
             </div>
