Updated About me section

--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
               <tr>
                 <td>French</td>
                 <td>7</td>
-                <td>Advanced</td>
+                <td>Intermediate</td>
               </tr>
               <tr>
                 <td>Spanish</td>
