Added info on projects to work view

--- a/work.html
+++ b/work.html
@@ -48,54 +48,85 @@
             </h1>
             <div class="grid">
                 <!-- Grid items will live here -->
-                <div class="grid__item" style="background-image:
-                    url('/img/quiz_app.png')">
+                <div class="grid__item">
                     <h2>
-                        Mobile web app
+                        Pokedex Database app
                     </h2>
+                    <a href="https://fratzio.github.io/pokedex_jquery/">See
+                        the app in the wild!</a>
+                    <img class="project__img" src="img/pokedex.png" alt="A
+                        photo
+                        of My quiz app project">
+
                     <p>
-                        Macaroon cupcake marzipan gummi bears jelly cupcake
-                        jelly-o gingerbread. Cupcake biscuit chocolate cake
-                        donut chocolate cake croissant oat cake oat cake.
+                        A web application with HTML, CSS, JQuery, and JavaScript
+                        that loads data from an
+                        external API and enables the viewing of a pokemon of
+                        choice in an info modal.
                     </p>
-                    <a href="#">See project in Github</a>
+                    <a href="https://github.com/fratzio/pokedex_jquery">See
+                        project in Github</a>
+
+
                 </div>
                 <div class="grid__item">
                     <h2>
-                        Mobile web app
+                        Movie Database app
                     </h2>
+                    <a href="https://vfa.herokuapp.com/">See
+                        the app in the wild!</a>
+                    <img class="project_img" src="img/movie_app.png" alt="A
+                        photo
+                        of My movie app project">
                     <p>
-                        Macaroon cupcake marzipan gummi bears jelly cupcake
-                        jelly-o gingerbread. Cupcake biscuit chocolate cake
-                        donut chocolate cake croissant oat cake oat cake.
+                        A REST API web application using MERN and Redux —
+                        providing customers users with access to information
+                        about different movies, directors, and genres. Users
+                        will be able to sign up, update their personal
+                        information, and create a list of their favorite
+                        movies. Implementing the design pattern (MVC).
                     </p>
-                    <a href="#">See project in Github</a>
+                    <a href="https://github.com/fratzio/movie_api">See project
+                        in Github</a>
+
                 </div>
                 <div class="grid__item">
                     <h2>
-                        Mobile web app
+                        Angular Quiz App
                     </h2>
+                    <a href="https://fratzio.github.io/quiz_app/">See
+                        the app in the wild!</a>
+                    <img class="project_img" src="img/quiz_app.png" alt="A
+                        photo
+                        of My movie app project">
                     <p>
-                        Macaroon cupcake marzipan gummi bears jelly cupcake
-                        jelly-o gingerbread. Cupcake biscuit chocolate cake
-                        donut chocolate cake croissant oat cake oat cake.
+                        A basic quiz app using Angular and TypeScript
                     </p>
-                    <a href="#">See project in Github</a>
+                    <a href="https://github.com/fratzio/quiz_app">See project in
+                        Github</a>
+
                 </div>
                 <div class="grid__item">
                     <h2>
-                        Mobile web app
+                        Vue.js To-do app
                     </h2>
+                    <a href="https://fratzio.github.io/to-do">See
+                        the app in the wild!</a>
+                    <img class="project_img" src="img/to_do.png" alt="A
+                        photo
+                        of My movie app project">
                     <p>
-                        Macaroon cupcake marzipan gummi bears jelly cupcake
-                        jelly-o gingerbread. Cupcake biscuit chocolate cake
-                        donut chocolate cake croissant oat cake oat cake.
+                        A basic To-Do list application using Vue.js and
+                        implementing the design pattern (MVVM) and Material
+                        Design via Vue Material.
                     </p>
-                    <a href="#">See project in Github</a>
+                    <a href="https://fratzio.github.io/to-do/">See project in
+                        Github</a>
+
                 </div>
                 <div class="grid__item">
                     <h2>
-                        Mobile web app
+                        What app is next...?
                     </h2>
                     <p>
                         Macaroon cupcake marzipan gummi bears jelly cupcake
@@ -103,6 +134,7 @@
                         donut chocolate cake croissant oat cake oat cake.
                     </p>
                     <a href="#">See project in Github</a>
+
                 </div>
             </div>
         </section>
