Added styling to project grid objects and added target blank to all links

--- a/work.html
+++ b/work.html
@@ -52,7 +52,8 @@
                     <h2>
                         Pokedex Database app
                     </h2>
-                    <a href="https://fratzio.github.io/pokedex_jquery/">See
+                    <a href="https://fratzio.github.io/pokedex_jquery/"
+                        target="_blank" class="call-to-action">See
                         the app in the wild!</a>
                     <img class="project__img" src="img/pokedex.png" alt="A
                         photo
@@ -64,7 +65,8 @@
                         external API and enables the viewing of a pokemon of
                         choice in an info modal.
                     </p>
-                    <a href="https://github.com/fratzio/pokedex_jquery">See
+                    <a href="https://github.com/fratzio/pokedex_jquery"
+                        target="_blank">See
                         project in Github</a>
 
 
@@ -73,7 +75,8 @@
                     <h2>
                         Movie Database app
                     </h2>
-                    <a href="https://vfa.herokuapp.com/">See
+                    <a href="https://vfa.herokuapp.com/" class="call-to-action"
+                        target="_blank">See
                         the app in the wild!</a>
                     <img class="project_img" src="img/movie_app.png" alt="A
                         photo
@@ -86,7 +89,8 @@
                         information, and create a list of their favorite
                         movies. Implementing the design pattern (MVC).
                     </p>
-                    <a href="https://github.com/fratzio/movie_api">See project
+                    <a href="https://github.com/fratzio/movie_api"
+                        target="_blank">See project
                         in Github</a>
 
                 </div>
@@ -94,7 +98,8 @@
                     <h2>
                         Angular Quiz App
                     </h2>
-                    <a href="https://fratzio.github.io/quiz_app/">See
+                    <a href="https://fratzio.github.io/quiz_app/"
+                        target="_blank" class="call-to-action">See
                         the app in the wild!</a>
                     <img class="project_img" src="img/quiz_app.png" alt="A
                         photo
@@ -102,7 +107,8 @@
                     <p>
                         A basic quiz app using Angular and TypeScript
                     </p>
-                    <a href="https://github.com/fratzio/quiz_app">See project in
+                    <a href="https://github.com/fratzio/quiz_app"
+                        target="_blank">See project in
                         Github</a>
 
                 </div>
@@ -110,7 +116,8 @@
                     <h2>
                         Vue.js To-do app
                     </h2>
-                    <a href="https://fratzio.github.io/to-do">See
+                    <a href="https://fratzio.github.io/to-do" target="_blank"
+                        class="call-to-action">See
                         the app in the wild!</a>
                     <img class="project_img" src="img/to_do.png" alt="A
                         photo
@@ -120,7 +127,8 @@
                         implementing the design pattern (MVVM) and Material
                         Design via Vue Material.
                     </p>
-                    <a href="https://fratzio.github.io/to-do/">See project in
+                    <a href="https://github.com/fratzio/to-do/" target="_blank">See
+                        project in
                         Github</a>
 
                 </div>
@@ -144,11 +152,12 @@
                 Find me on
             </p>
             <div class="page-footer__item social-container">
-                <a href="" class="social-container__item"><img
+                <a href="https://github.com/fratzio/"
+                    class="social-container__item" target="_blank"><img
                         src="img/github.svg" alt="Github"></a>
                 <a href="" class="social-container__item"><img
                         src="img/twitter.svg" alt="Twitter"></a>
-                <a href="" class="social-container__item"><img
+                <a href="" class="social-container__item" target="_blank"><img
                         src="img/linkedin.svg" alt="LinkedIn"></a>
             </div>
         </footer>
