Added new meetup app project to website and removed extra empty grid item | changed responsive grids stylings

--- a/work.html
+++ b/work.html
@@ -134,14 +134,26 @@
                 </div>
                 <div class="grid__item">
                     <h2>
-                        What app is next...?
+                        Meetup App
                     </h2>
+                    <a href="https://fratzio.github.io/meetup" target="_blank"
+                        class="call-to-action">See
+                        the app in the wild!</a>
+                    <img class="project_img" src="img/meetup.png" alt="A
+                        photo
+                        of My meetup app project">
                     <p>
-                        Macaroon cupcake marzipan gummi bears jelly cupcake
-                        jelly-o gingerbread. Cupcake biscuit chocolate cake
-                        donut chocolate cake croissant oat cake oat cake.
+                        A serverless, progressive web application (PWA) with
+                        React using a test-driven development (TDD) technique.
+                        The application uses the Meetup API to fetch upcoming
+                        events for a selected city. Leveraging rechart library
+                        graphs
+                        for visualistion fo data.
                     </p>
-                    <a href="#">See project in Github</a>
+                    <a href="https://github.com/fratzio/meetup/"
+                        target="_blank">See
+                        project in
+                        Github</a>
 
                 </div>
             </div>
