Added chat app work and linkedin/github links to socials

--- a/work.html
+++ b/work.html
@@ -156,6 +156,33 @@
                         Github</a>
 
                 </div>
+                <div class="grid__item">
+                    <h2>
+                        The Chat App
+                    </h2>
+                    <a href="https://github.com/fratzio/chatApp/"
+                        target="_blank"
+                        class="call-to-action">View Readme to get your own
+                        version of the Chat app!</a>
+                    <img class="project_img" src="img/chat_app.png" alt="A
+                        photo
+                        of My meetup app project">
+                    <p>
+                        The Chat app is a React-Native Chat app leveraging the
+                        Gifted Chat library.
+                        It features offline-storage, cloud-based file and
+                        message
+                        storage in Firebase, offline viewing of chat messages
+                        and the
+                        ability to send your location or a photo off your
+                        mobile.
+                    </p>
+                    <a href="https://github.com/fratzio/chatApp/"
+                        target="_blank">See
+                        project in
+                        Github</a>
+
+                </div>
             </div>
         </section>
         <!-- Footer with links to social media profiles -->
@@ -169,7 +196,8 @@
                         src="img/github.svg" alt="Github"></a>
                 <a href="" class="social-container__item"><img
                         src="img/twitter.svg" alt="Twitter"></a>
-                <a href="" class="social-container__item" target="_blank"><img
+                <a href="https://www.linkedin.com/in/thomasfrazer/"
+                    class="social-container__item" target="_blank"><img
                         src="img/linkedin.svg" alt="LinkedIn"></a>
             </div>
         </footer>
