Updated contact page

--- a/contact.html
+++ b/contact.html
@@ -51,11 +51,6 @@
                 </h2>
                 <ul role="menubar">
                     <li role="presentation">
-                        <label>Tel:</label>
-                        <a href="tel:+6666666666" aria-label="Clickable link to
-                            start a telephone call" role="menuitem">+6666666</a>
-                    </li>
-                    <li role="presentation">
                         <label>Skype:</label>
                         <a role="menuitem" aria-label="A clickable link to make
                             a Skype call" href="skype:live:thomasmichaelfrazer">
@@ -72,7 +67,10 @@
                     call" href="skype:live:thomasmichaelfrazer">Let's connect</a>
             </div>
         </div>
-        <div id="contact-form-container">
+
+        <!-- Will add backed to contact form later  -->
+
+        <!-- <div id="contact-form-container">
             <p>
                 You can also send through your contact details and leave a
                 message with your project idea if that's your style: <br>
@@ -91,7 +89,7 @@
                 <textarea maxlength="240" id="contact-msg" required></textarea>
                 <input type="submit" value="Send message">
             </form>
-        </div>
+        </div> -->
         <!-- Footer with links to social media profiles -->
         <footer class="page-footer">
             <p class="page-footer__item">
