--- a/index.html
+++ b/index.html
@@ -1,75 +1,305 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>My First Portfolio Website</title>
-        <link rel="shortcut icon"
-            href="https://vignette.wikia.nocookie.net/donthugmeimscared/images/6/64/Favicon.ico/revision/latest?cb=20190206212533">
-        <link rel="stylesheet" type="text/css"
-            href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-        <link rel="stylesheet"
-            href="https://fonts.googleapis.com/css?family=Bangers&display=swap">
-        <link rel="stylesheet" type="text/css" href="css/style.production.css">
-    </head>
-    <body>
-        <!-- Header including the logo and the main navigation -->
-        <header class="page-header">
-            <!-- Add your logo here -->
-            <img src="img/logo.svg" alt="Logo Image" class="page-header__item
-                profile_logo">
-            <nav class="main-navigation page-header__item">
-                <ul role="menubar" class="navigation-list">
-                    <!--Navigation links -->
-                    <li role="presentation">
-                        <a href="index.html" role="menuitem"
-                            class="navigation-list__item
-                            navigation-list__item--active">Home</a>
-                    </li>
-                    <li role="presentation">
-                        <a href="about.html" aria-label="About me"
-                            role="menuitem" class="navigation-list__item">About</a>
-                    </li>
-                    <li role="presentation">
-                        <a href="contact.html" role="menuitem"
-                            class="navigation-list__item">Contact</a>
-                    </li>
-                    <li role="presentation">
-                        <a href="work.html" role="menuitem"
-                            class="navigation-list__item">Work</a>
-                    </li>
-                </ul>
-            </nav>
-        </header>
-        <div class="profile">
-            <!-- 
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>My First Portfolio Website</title>
+    <link rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+      crossorigin="anonymous">
+    <link
+      rel="shortcut icon"
+      href="https://vignette.wikia.nocookie.net/donthugmeimscared/images/6/64/Favicon.ico/revision/latest?cb=20190206212533"
+      />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+      />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IM+Fell+DW+Pica+SC&display=swap"
+      rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/styles.css" />
+  </head>
+  <body>
+    <!-- Header including the logo and the main navigation -->
+    <header class="page-header">
+      <nav class="main-navigation page-header__item">
+        <ul role="menubar" class="navigation-list">
+          <!--Navigation links -->
+          <li role="presentation">
+            <a
+              href="index.html"
+              role="menuitem"
+              class="navigation-list__item navigation-list__item--active">Home</a>
+          </li>
+          <li role="presentation">
+            <a href="#contact-body" role="menuitem"
+              class="navigation-list__item">Contact</a>
+          </li>
+          <li role="presentation">
+            <a href="#languages-body" role="menuitem"
+              class="navigation-list__item">Work</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <div class="container_profile">
+      <section class="profile">
+        <!-- 
         Add your Portrait image here
         -->
-            <img class="profile__portrait" src="img/portfolio_img.jpg" alt="A
-                photo of Thomas Frazer">
-            <h1>Well hello, there!</h1>
-            <p>
-                My name is Thomas Frazer. I am a <span>web developer</span> from
-                Australia
-            </p>
-            <a href="work.html">Check out some of my projects</a>
-        </div>
-        <!-- Footer with links to social media profiles -->
-        <footer class="page-footer">
-            <p class="page-footer__item">
-                Find me on
-            </p>
-            <div class="page-footer__item social-container">
-                <a href="https://github.com/fratzio/"
-                    class="social-container__item"><img src="img/github.svg"
-                        alt="Github"></a>
-                <a href="" class="social-container__item"><img
-                        src="img/twitter.svg" alt="Twitter"></a>
-                <a href="https://www.linkedin.com/in/thomasfrazer/"
-                    class="social-container__item"><img src="img/linkedin.svg"
-                        alt="LinkedIn"></a>
+        <img
+          class="profile__portrait"
+          src="img/portfolio_img.jpg"
+          alt="A
+          photo of Thomas Frazer"
+          />
+        <h1>Thomas Frazer <span id="alt-font">[he/him]</span></h1>
+        <p>
+        </section>
+        <section id="about-body">
+          <p>
+            I am a creative type; with a B.A in languages and Music, I like to
+            write
+            and create in various modes and forms.
+            <br />
+            <br />
+            I am passionate about learning how coding languages can help broaden
+            the
+            depth and limits of my creativity and expression. And how it can
+            help
+            me
+            allow others to express themselves creatively.
+          </p>
+
+        </section>
+      </div>
+      <div class="container-languages">
+        <section id="languages-body">
+          <p class="languages-body__item">Language Proficency</p>
+          <div class="languages-body__item languages-container">
+            <div
+              class="languages-container__item" data-toggle="tooltip"
+              animation="true"
+              data-placement="auto" title="CSS 2yrs">
+              <img src="img/css.svg"
+                alt="CSS3" /></div>
+            <div
+              class="languages-container__item" data-toggle="tooltip"
+              animation="true"
+              data-placement="auto" title="HTML 2yrs"><img src="img/html5.svg"
+                alt="HTML5" /></div>
+            <div
+              class="languages-container__item" data-toggle="tooltip"
+              animation="true"
+              data-placement="auto" title="React 1yr"><img src="img/react.svg"
+                alt="React" /></div>
+            <div
+              class="languages-container__item" data-toggle="tooltip"
+              animation="true"
+              data-placement="auto" title="Python 4yrs"><img
+                src="img/python.svg"
+                alt="Python" /></div>
+            <div class="languages-container__item" data-toggle="tooltip"
+              animation="true"
+              data-placement="auto" title="Angular 1yr"><img
+                src="img/angular.svg" alt="Angular" /></div>
+            <div
+              class="languages-container__item" data-toggle="tooltip"
+              animation="true"
+              data-placement="auto" title="Vue 1yr"><img src="img/vue.svg"
+                alt="vue" /></div>
+
+            <div
+              class="languages-container__item" data-toggle="tooltip"
+              animation="true"
+              data-placement="auto" title="MongoDB 1yr"><img
+                src="img/mongodb.svg"
+                alt="MongoDb" /></div>
+            <div
+              class="languages-container__item" data-toggle="tooltip"
+              animation="true"
+              data-placement="auto" title="React Native 1yr"><img
+                src="img/react-native.svg"
+                alt="React Native" /></div>
+            <div class="languages-container__item" data-toggle="tooltip"
+              animation="true"
+              data-placement="auto" title="Node 1yr"><img src="img/nodejs.svg"
+                alt="Nodejs" /></div>
+          </div>
+        </section>
+      </div>
+      <!-- Work section -->
+      <div class="container-work">
+        <section id="work-body">
+          <h1>
+            Work
+          </h1>
+          <div class="grid">
+            <!-- Grid items will live here -->
+            <div class="grid__item" data-toggle="modal"
+              data-target="#workModal">
+              <img id="pokedex-app" class="project__img" src="img/pokedex.png"
+                alt="A
+                photo
+                of My Pokedex app project">
             </div>
-        </footer>
-        <script src="js/tota11y.min.js"></script>
-    </body>
+            <div class="grid__item" data-toggle="modal"
+              data-target="#workModal">
+              <img id="movie-app" class="project_img" src="img/movie_app.png"
+                alt="A
+                photo
+                of My movie app project">
+            </div>
+            <div class="grid__item" data-toggle="modal"
+              data-target="#workModal">
+              <img id="quiz-app" class="project_img" src="img/quiz_app.png"
+                alt="A
+                photo
+                of My quiz app project">
+            </div>
+            <div class="grid__item" data-toggle="modal"
+              data-target="#workModal">
+              <img id="to-do" class="project_img" src="img/to_do.png" alt="A
+                photo
+                of My to-do app project">
+            </div>
+            <div class="grid__item" data-toggle="modal"
+              data-target="#workModal">
+              <img id="meetup" class="project_img" src="img/meetup.png" alt="A
+                photo
+                of My meetup app project">
+            </div>
+            <div class="grid__item" data-toggle="modal"
+              data-target="#workModal">
+              <img id="chat-app" class="project_img" src="img/chat_app.png"
+                alt="A
+                photo
+                of My chat app project">
+            </div>
+          </div>
+        </section>
+      </div>
+
+      <!-- Modal  -->
+      <div class="modal fade" tabindex="-1" role="dialog" id="workModal"
+        aria-labelledby="#workModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h2 class="modal-title" id="workModalLabel">
+              </h5>
+              <button type="button" class="close" data-dismiss="modal"
+                aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <div class="img-wrapper">
+                <img id="img" src="" class="img-fluid rounded mx-auto d-block"
+                  alt="Responsive image" />
+              </div>
+
+              <div class="modal-text text-center"></div>
+            </div>
+            <div class="modal-footer">
+              <a id="button-code" class="btn btn-primary call-to-action"
+                href="#"
+                role="button" target="_blank">Code</a>
+              <a id="button-demo" class="btn btn-warning call-to-action"
+                href="#"
+                role="button" target="_blank">Demo</a>
+              <button type="button" class="btn btn-danger call-to-action"
+                data-dismiss="modal">
+                Close
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Modal end -->
+
+      <!-- Contact section -->
+      <div class="container-contact">
+        <section id="contact-body">
+          <h1>
+            Contact details
+          </h1>
+          <div>
+            <h2>
+              You can reach me by these methods:<br>
+            </h2>
+            <ul role="menubar">
+              <li role="presentation">
+                <label>Skype:</label>
+                <a role="menuitem" aria-label="A clickable link to make
+                  a Skype call" href="skype:live:thomasmichaelfrazer">
+                  live:thomasmichaelfrazer</a>
+              </li>
+              <li role="presentation">
+                <label>Email:</label>
+                <a role="menuitem" href="mailto:thomasmichaelfrazer@gmail.com">
+                  thomasmichaelfrazer@gmail.com</a>
+              </li>
+            </ul>
+            <a href="files/CV-2020.pdf" class="button" download>Download my CV</a>
+          </div>
+        </section>
+      </div>
+
+      <!-- Will add backed to contact form later  -->
+
+      <!-- <div id="contact-form-container">
+                <p>
+                    You can also send through your contact details and leave a
+                    message with your project idea if that's your style: <br>
+                </p>
+                <form method="post" id="contact-form">
+                    <label class="standard-label" for="contact-email">E-mail*:
+                    </label>
+                    <input type="email" id="contact-email" required>
+                    <br>
+                    <label class="standard-label" for="contact-tel">Telephone:
+                    </label>
+                    <input type="tel" id="contact-tel">
+                    <br>
+                    <label class="standard-label" for="contact-msg">Message*:
+                    </label>
+                    <textarea maxlength="240" id="contact-msg" required></textarea>
+                    <input type="submit" value="Send message">
+                </form>
+            </div> -->
+    </div>
+    <!-- Footer with links to social media profiles -->
+    <footer class="page-footer">
+      <p class="page-footer__item">Find me on</p>
+      <div class="page-footer__item social-container">
+        <a href="https://github.com/fratzio/" class="social-container__item"><img
+            src="img/github.svg" alt="Github"
+            /></a>
+        <a
+          href="https://www.linkedin.com/in/thomasfrazer/"
+          class="social-container__item"><img src="img/linkedin.svg"
+            alt="LinkedIn"
+            /></a>
+      </div>
+    </footer>
+    <!-- Scripts -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+      integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+      crossorigin="anonymous"></script>
+    <script src="js/script.js"></script>
+    <script src="js/tota11y.min.js"></script>
+  </body>
 </html>
