Added responsive styling for mobile devices

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </section>
         <section id="about-body">
           <p>
-            I am a creative type; with a B.A in languages and Music, I like to
+            I am a creative type; with a B.A in languages and Music. I like to
             write
             and create in various modes and forms.
             <br />
@@ -82,55 +82,37 @@
       </div>
       <div class="container-languages">
         <section id="languages-body">
-          <p class="languages-body__item">Language Proficency</p>
+          <h3 class="languages-body__item">Language Proficency</h3>
           <div class="languages-body__item languages-container">
             <div 
-              class="languages-container__item" data-toggle="tooltip"
-              animation="true"
-              data-placement="auto" title="CSS 2yrs">
+              class="languages-container__item" >
               <img src="img/css.svg"
                 alt="CSS3" /></div>
             <div
-              class="languages-container__item" data-toggle="tooltip"
-              animation="true"
-              data-placement="auto" title="HTML 2yrs"><img src="img/html5.svg"
+              class="languages-container__item" title="HTML 2yrs"><img src="img/html5.svg"
                 alt="HTML5" /></div>
             <div
-              class="languages-container__item" data-toggle="tooltip"
-              animation="true"
-              data-placement="auto" title="React 1yr"><img src="img/react.svg"
+              class="languages-container__item" title="React 1yr"><img src="img/react.svg"
                 alt="React" /></div>
             <div
-              class="languages-container__item" data-toggle="tooltip"
-              animation="true"
-              data-placement="auto" title="Python 4yrs"><img
+              class="languages-container__item" title="Python 4yrs"><img
                 src="img/python.svg"
                 alt="Python" /></div>
-            <div class="languages-container__item" data-toggle="tooltip"
-              animation="true"
-              data-placement="auto" title="Angular 1yr"><img
+            <div class="languages-container__item" title="Angular 1yr"><img
                 src="img/angular.svg" alt="Angular" /></div>
             <div
-              class="languages-container__item" data-toggle="tooltip"
-              animation="true"
-              data-placement="auto" title="Vue 1yr"><img src="img/vue.svg"
+              class="languages-container__item" title="Vue 1yr"><img src="img/vue.svg"
                 alt="vue" /></div>
 
             <div
-              class="languages-container__item" data-toggle="tooltip"
-              animation="true"
-              data-placement="auto" title="MongoDB 1yr"><img
+              class="languages-container__item" title="MongoDB 1yr"><img
                 src="img/mongodb.svg"
                 alt="MongoDb" /></div>
             <div
-              class="languages-container__item" data-toggle="tooltip"
-              animation="true"
-              data-placement="auto" title="React Native 1yr"><img
+              class="languages-container__item" title="React Native 1yr"><img
                 src="img/react-native.svg"
                 alt="React Native" /></div>
-            <div class="languages-container__item" data-toggle="tooltip"
-              animation="true"
-              data-placement="auto" title="Node 1yr"><img src="img/nodejs.svg"
+            <div class="languages-container__item" title="Node 1yr"><img src="img/nodejs.svg"
                 alt="Nodejs" /></div>
           </div>
         </section>
@@ -225,20 +207,11 @@
       <!-- Contact section -->
       <div class="container-contact">
         <section id="contact-body">
-          <h1>
+          <h3 class="contact-title">
             Contact details
-          </h1>
-          <div>
-            <h2>
-              You can reach me by these methods:<br>
-            </h2>
+          </h3>
+          <div class="contact-styles">
             <ul role="menubar">
-              <li role="presentation">
-                <label>Skype:</label>
-                <a role="menuitem" aria-label="A clickable link to make
-                  a Skype call" href="skype:live:thomasmichaelfrazer">
-                  live:thomasmichaelfrazer</a>
-              </li>
               <li role="presentation">
                 <label>Email:</label>
                 <a role="menuitem" href="mailto:thomasmichaelfrazer@gmail.com">
