finished post-processing of css file

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       href="https://fonts.googleapis.com/css2?family=IM+Fell+DW+Pica+SC&display=swap"
       rel="stylesheet">
       <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link rel="stylesheet" type="text/css" href="css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.production.css" />
   </head>
   <body>
     <!-- Header including the logo and the main navigation -->
