Updated to live domain

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
         <footer class="page-footer">
           <p class="page-footer__item">Find me on</p>
           <div class="page-footer__item social-container">
-            <a href="https://github.com/fratzio/"
+            <a href="https://github.com/tommy-trombone/"
               class="social-container__item"><img
                 src="img/github.svg" alt="Github"
                 /></a>
